AI difficulty adjusted. Now the 'Easy' state is set to 20% of the time right. 'Average' will make the right move approx 75% of the time, and 'Hard' has been fixed so as the disocovered bug of corraling the AI into the wrong move no longer happens.

--- a/player.scss
+++ b/player.scss
@@ -344,10 +344,6 @@ hr {
 		margin: 0px;
 		padding-left: 20px;
 	}
-	.winner-half {
-		display: block;
-		width: 40%;
-	}
 	.left {
 		float: left;
 	}
